--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,20 @@ appdirs==1.4.3
 cffi==1.10.0
 click==6.7
 cryptography==1.7.2
+ecdsa==0.13
 Flask==0.12.1
 idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
 jwt==0.5.2
 MarkupSafe==1.0
+mccabe==0.6.1
 packaging==16.8
 pyasn1==0.2.3
+pycodestyle==2.3.1
+pycoin==0.77
 pycparser==2.17
+pyflakes==1.5.0
 pyparsing==2.2.0
 six==1.10.0
 Werkzeug==0.12.1
