--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 appdirs==1.4.3
+bip32utils==0.3.post3
+bitcoin==1.1.42
 cffi==1.10.0
 click==6.7
 cryptography==1.7.2
 ecdsa==0.13
+ethereum==1.6.1
 Flask==0.12.1
 idna==2.5
 itsdangerous==0.24
@@ -11,11 +14,20 @@ jwt==0.5.2
 MarkupSafe==1.0
 mccabe==0.6.1
 packaging==16.8
+pbkdf2==1.3
 pyasn1==0.2.3
 pycodestyle==2.3.1
 pycoin==0.77
 pycparser==2.17
+pycryptodome==3.4.5
+pyethash==0.1.27
 pyflakes==1.5.0
 pyparsing==2.2.0
+pysha3==1.0.2
+PyYAML==3.12
+repoze.lru==0.6
+rlp==0.5.1
+scrypt==0.8.0
+secp256k1==0.13.2
 six==1.10.0
 Werkzeug==0.12.1
