--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ Flask==0.12.1
 idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
-jwt==0.5.2
 MarkupSafe==1.0
 mccabe==0.6.1
 packaging==16.8
 pbkdf2==1.3
+py==1.4.33
 pyasn1==0.2.3
 pycodestyle==2.3.1
 pycoin==0.77
@@ -22,8 +22,10 @@ pycparser==2.17
 pycryptodome==3.4.5
 pyethash==0.1.27
 pyflakes==1.5.0
+PyJWT==1.4.2
 pyparsing==2.2.0
 pysha3==1.0.2
+pytest==3.0.7
 PyYAML==3.12
 repoze.lru==0.6
 rlp==0.5.1
